<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <CheckBox
            android:id="@+id/csv_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_format_csv" />

        <CheckBox
            android:id="@+id/gpx_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_format_gpx" />

        <CheckBox
            android:id="@+id/kml_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_format_kml" />

        <CheckBox
            android:id="@+id/kmz_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_format_kmz" />

        <CheckBox
            android:id="@+id/csv_ocid_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_format_csv_ocid" />

        <CheckBox
            android:id="@+id/json_mls_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_format_json_mls" />

        <CheckBox
            android:id="@+id/compress_export_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/export_format_zip" />
    </LinearLayout>

</ScrollView>