<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <CheckBox
            android:id="@+id/ocid_upload_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocid_name" />

        <TextView
            android:id="@+id/ocid_invalid_api_key_upload_dialog_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_valid_api_key"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/background_invalid" />

        <CheckBox
            android:id="@+id/mls_upload_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mls_name" />

        <CheckBox
            android:id="@+id/reupload_if_upload_fails_upload_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reupload_measurements_if_upload_fails_for_one_of_projects" />

        <CheckBox
            android:id="@+id/dont_show_again_dialog_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_dont_show_again" />
    </LinearLayout>

</ScrollView>